package com.directi.training.srp.exercise_refactored;

public interface CarComparator {
    Car getBestCar();
}
