package com.directi.training.srp.exercise_refactored;

public interface CarInfoProvider {
    String getCarsNames();
}
