package com.directi.training.srp.exercise_refactored;

import java.util.List;

public class CarNameProvider implements CarInfoProvider {
    private CarDatabase carDatabase;

    public void CarsNamesProvider(CarDatabase carDatabase) {
        this.carDatabase = carDatabase;
    }

    @Override
    public String getCarsNames() {
        List<Car> cars = carDatabase.getAllCars();
        StringBuilder sb = new StringBuilder();
        for (Car car : cars) {
            sb.append(car.getBrand());
            sb.append(" ");
            sb.append(car.getModel());
            sb.append(", ");
        }
        return sb.substring(0, sb.length() - 2);
    }
}
